Closed
Bug 658363
Opened 14 years ago
Closed 14 years ago
MOVE DEFINES FOR DOUBLE CONSTANTS OUT OF XSLT
Categories
(Core :: XSLT, defect)
Core
XSLT
Tracking
()
RESOLVED
FIXED
People
(Reporter: tbsaunde, Assigned: tbsaunde)
Details
Attachments
(2 files)
|
15.46 KB,
patch
|
sicking
:
review+
|
Details | Diff | Splinter Review |
|
1022 bytes,
patch
|
sicking
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:6.0a1) Gecko/20110518 Firefox/6.0a1
Build Identifier:
XSLT has some defines for doubles that would be useful outside of xslt
Reproducible: Always
| Assignee | ||
Updated•14 years ago
|
Whiteboard: :SICKING
| Assignee | ||
Comment 1•14 years ago
|
||
first shot, there's a lot more random basic runtimey code in xslt/src/base that should go away eventually, but this atleast makes it smaller.
Attachment #533763 -
Flags: review?(jonas)
Comment on attachment 533763 [details] [diff] [review]
patch
Looks good to me!
Attachment #533763 -
Flags: review?(jonas) → review+
| Assignee | ||
Comment 3•14 years ago
|
||
landed on mozilla-central hg.mozilla.org/mozilla-central/rev/2b53d3079c78
/TMP/LINK
Assignee: nobody → trev.saunders
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Comment 4•14 years ago
|
||
Fwiw, it looks there's a typo in the commit, line 56 of txDouble.cpp there's still a 'txdpun' type used, and this broke builds on at least OpenBSD/sparc64, as can be seen on http://buildbot.rhaalovely.net/builders/comm-central-sparc64/builds/25/steps/build/logs/stdio
/var/buildslave/comm-central-sparc64/build/mozilla/content/xslt/src/base/txDouble.cpp:56: error: 'txdpun' does not name a type
/var/buildslave/comm-central-sparc64/build/mozilla/content/xslt/src/base/txDouble.cpp:56: error: extra ';'
I guess s/txdpun/dpun/ fixes it, will test. Reopening in the meantime.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 5•14 years ago
|
||
Here's the hg patch i'm testing
| Assignee | ||
Comment 6•14 years ago
|
||
(In reply to comment #5)
> Created attachment 536163 [details] [diff] [review] [review]
> Fix probable typo
>
> Here's the hg patch i'm testing
yeah, looks like I missed a spot when I grepped for uses, sorry about that.
Comment 7•14 years ago
|
||
The patch fixes the build for me. (well, make package still chokes with bus error on sparc64, but that's another story)
Comment on attachment 536163 [details] [diff] [review]
Fix probable typo
Thanks!
Attachment #536163 -
Flags: review+
| Assignee | ||
Comment 9•14 years ago
|
||
| Assignee | ||
Updated•14 years ago
|
Status: REOPENED → RESOLVED
Closed: 14 years ago → 14 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
Whiteboard: :SICKING
You need to log in
before you can comment on or make changes to this bug.
Description
•