bug 658363 - move defines for double constants out of xslt r=sicking

From 57a4aaadf8fef828764c35dad01ce6da54fbb638 Mon Sep 17 00:00:00 2001
 xslt
---
 content/base/public/nsContentUtils.h        |   93 +++++++++++++++++++
 content/xslt/public/Makefile.in             |    1 -
 content/xslt/public/txDouble.h              |  133 ---------------------------
 content/xslt/src/base/txCore.h              |    8 +-
 content/xslt/src/base/txDouble.cpp          |   18 ++--
 content/xslt/src/xpath/txRelationalExpr.cpp |   12 +-
 6 files changed, 112 insertions(+), 153 deletions(-)
 delete mode 100644 content/xslt/public/txDouble.h